--- a/Pages/ViewItemCards.cshtml
+++ b/Pages/ViewItemCards.cshtml
@@ -44,7 +44,7 @@
     }
 </div> *@
 
-<a href="ManageItemCards"><button  class="btn btn-secondary">Back</button></a>
+<a href="ManageItemCards"><button  class="btn btn-secondary">@Model.lblBack</button></a>
 <button id="printBtn" class="btn btn-primary">@Model.lblPrint</button>
 
 
