--- a/Pages/HazardTypes/Index.cshtml
+++ b/Pages/HazardTypes/Index.cshtml
@@ -52,9 +52,9 @@
                             <td>@item.HazardTypeName</td>
                             <td>
                                 <div class="btn-toolbar mb-2 mb-md-0 d-flex flex-wrap">
-                                    <div class="btn-group d-flex mx-3 ms-lg-3">
+                                    @* <div class="btn-group d-flex mx-3 ms-lg-3">
                                         <a asp-page="./Edit" asp-route-id="@item.HazardTypeName" class="btn btn-primary">Edit</a>
-                                    </div>
+                                    </div> *@
                                     <div class="btn-group d-flex mx-3 ms-lg-3">
                                         <a asp-page="./Details" asp-route-id="@item.HazardTypeName" class="btn btn-secondary">Details</a>
                                     </div>
