--- a/Pages/HazardTypes/Details.cshtml
+++ b/Pages/HazardTypes/Details.cshtml
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="card-footer bg-transparent border-top-0 d-flex gap-2">
-                <a asp-page="./Edit" asp-route-id="@Model.HazardType.HazardTypeName" class="btn btn-primary">Edit</a>
+                @* <a asp-page="./Edit" asp-route-id="@Model.HazardType.HazardTypeName" class="btn btn-primary">Edit</a> *@
                 <a asp-page="./Index" class="btn btn-secondary">Back to List</a>
             </div>
         </div>
