--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -171,7 +171,7 @@
 
                 @if (Model.CanManageItems)
                 {
-                    <li class="nav-item @(Context.Request.Path == "/ViewReturnRequests" || Context.Request.Path == "/DamageItem" ? "active" : "")">
+                    <li class="nav-item @(Context.Request.Path == "/ViewReturnRequests"|| Context.Request.Path == "/ReturnRequestsDetails" || Context.Request.Path == "/DamageItem" ? "active" : "" )">
                         <a asp-area="" asp-page="/ViewReturnRequests" class="nav-link">
                             <span class="sidebar-icon">
                                 <img class="icon icon-xs mx-1" src="~/images/inventory.png" />
